Update to Docker file and remove log4j dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions> 
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+			</exclusions> 
 		</dependency>
 
 		<dependency>
@@ -153,7 +163,7 @@
 			<!-- Override this with old version to cause mail header injection -->
 			<version>1.5.1</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
-
+		
 	</dependencies>
 
 	<build>
